<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_contest"
        android:icon="@drawable/ic_trophy_grey"

        android:title="@string/contest"/>

    <item
        android:id="@+id/navigation_feeds"
        android:icon="@drawable/ic_feeds_grey"
        android:title="@string/feeds"/>

    <item
        android:id="@+id/navigation_add_feed"
        android:icon="@drawable/ic_add_circular_grey"
        android:title="@string/add_feed"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_grey"
        android:title="@string/profile"/>
    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_ellipsis_grey"
        android:title="@string/more"/>

</menu>