<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="listener"
            type="com.magnum.app.adapter.listener.ForceUpdateListener"/>
    </data>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:elevation="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUpdateTitle"
                style="@style/textTitle16"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/new_version_available"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContent"
                style="@style/textNormalBlack16"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/please_update_the_app_to_continue"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUpdateTitle"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdate"
                style="@style/primaryFullButtonCorner"
                android:layout_marginTop="@dimen/_16sdp"
                android:minHeight="@dimen/_32sdp"
                android:text="@string/update"
                android:onClick="@{()->listener.onClickUpdate()}"
                android:textSize="@dimen/sp_12"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvContent"
                app:layout_constraintStart_toStartOf="@+id/tvContent"
                app:layout_constraintTop_toBottomOf="@+id/tvContent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
